--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ext/flecs"]
 	path = ext/flecs
 	url = https://github.com/SanderMertens/flecs
+[submodule "ext/my-msbuild"]
+	path = ext/my-msbuild
+	url = https://github.com/lithiumtoast/my-msbuild
