--- a/src/cs/samples/flecs-01_hello_world/flecs-01_hello_world.csproj
+++ b/src/cs/samples/flecs-01_hello_world/flecs-01_hello_world.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="../../production\flecs-cs\flecs-cs.csproj" />
+      <ProjectReference Include="../../production/flecs-cs/flecs-cs.csproj" />
     </ItemGroup>
 
 </Project>
