--- a/.github/workflows/flecs.yml
+++ b/.github/workflows/flecs.yml
@@ -3,7 +3,7 @@ name: "sdl"
 env:
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
-  DOTNET_SDK_VERSION: 5.0.301
+  DOTNET_SDK_VERSION: 6.x
 
 on:
   push:
