--- a/src/cs/Directory.Build.props
+++ b/src/cs/Directory.Build.props
@@ -1,11 +1,22 @@
 <Project>
 
-    <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove('$(MSBuildProjectDirectory)', '.gitignore'))/ext/my-msbuild/My-MSBuild.props" />
+    <!-- MSBuild settings -->
+    <PropertyGroup>
+        <NoWarn>$(NoWarn);CA1303;CA1707</NoWarn>
+    </PropertyGroup>
 
     <!-- bottlenoselabs.MSBuild settings -->
     <PropertyGroup>
         <EnableAnalyzers>true</EnableAnalyzers>
         <EnableAnalyzersStyleCop>true</EnableAnalyzersStyleCop>
     </PropertyGroup>
+
+    <!-- bottlenoselabs.MSBuild -->
+    <ItemGroup>
+        <PackageReference Include="bottlenoselabs.MSBuild.Tools" Version="0.1.132">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+    </ItemGroup>
 
 </Project>
