Rename C# project`flecs-cs` -> `flecs`

--- a/src/cs/samples/flecs-01_hello_world/flecs-01_hello_world.csproj
+++ b/src/cs/samples/flecs-01_hello_world/flecs-01_hello_world.csproj
@@ -9,7 +9,7 @@
 
     <!-- C# project references -->
     <ItemGroup>
-      <ProjectReference Include="../../production/flecs-cs/flecs-cs.csproj" />
+      <ProjectReference Include="..\..\production\flecs\flecs.csproj" />
       <ProjectReference Include="..\..\production\flecs.runtime.linux-x64\flecs.runtime.linux-x64.csproj" />
       <ProjectReference Include="..\..\production\flecs.runtime.osx\flecs.runtime.osx.csproj" />
       <ProjectReference Include="..\..\production\flecs.runtime.win-x64\flecs.runtime.win-x64.csproj" />
