--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -66,7 +66,7 @@ jobs:
         with:
           repository: '${{ github.repository }}'
           dotnet-sdk-version: '6.0.x'
-          gitversion-working-directory: './ext/libuv'
+          gitversion-working-directory: './ext/flecs'
           gitversion-config-file-path: '../../GitVersion_flecs.yml'
           is-enabled-pack: 'true'
           upload-myget-org: "${{ github.event_name == 'push' || startsWith(github.ref, 'refs/tags/v') }}"
