--- a/src/cs/production/flecs/bottlenoselabs.flecs.props
+++ b/src/cs/production/flecs/bottlenoselabs.flecs.props
@@ -1,35 +1,35 @@
 <Project>
   
   <PropertyGroup>
-    <_IsNuGetPackage Condition=" Exists('$(MSBuildThisFileDirectory)/flecs.cs')" >false</_IsNuGetPackage>
-    <_IsNuGetPackage Condition=" Exists('$(MSBuildThisFileDirectory)/../content/flecs.cs') ">true</_IsNuGetPackage>
+    <_IsNuGetPackage Condition="Exists('$(MSBuildThisFileDirectory)/flecs.cs')" >false</_IsNuGetPackage>
+    <_IsNuGetPackage Condition="Exists('$(MSBuildThisFileDirectory)/../content/flecs.cs')">true</_IsNuGetPackage>
     
-    <BottlenoseLabsUvDirectoryPath Condition=" $(_IsNuGetPackage) == 'false' ">$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)'))</BottlenoseLabsUvDirectoryPath>
-    <BottlenoseLabsUvDirectoryPath Condition=" $(_IsNuGetPackage) == 'true' ">$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)/..'))</BottlenoseLabsUvDirectoryPath>
-    <BottlenoseLabsUvContentDirectoryPath Condition=" $(_IsNuGetPackage) == 'false' ">$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)'))</BottlenoseLabsUvContentDirectoryPath>
-    <BottlenoseLabsUvContentDirectoryPath Condition=" $(_IsNuGetPackage) == 'true' ">$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)/../content'))</BottlenoseLabsUvContentDirectoryPath>
+    <_DirectoryPath Condition="$(_IsNuGetPackage) == 'false'">$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)'))</_DirectoryPath>
+    <_DirectoryPath Condition="$(_IsNuGetPackage) == 'true'">$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)/..'))</_DirectoryPath>
+    <_ContentDirectoryPath Condition=" $(_IsNuGetPackage) == 'false'">$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)'))</_ContentDirectoryPath>
+    <_ContentDirectoryPath Condition=" $(_IsNuGetPackage) == 'true'">$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)/../content'))</_ContentDirectoryPath>
   </PropertyGroup>
 
-  <ItemGroup Condition=" $(_IsNuGetPackage) == 'true' ">
+  <ItemGroup Condition="$(_IsNuGetPackage) == 'true'">
     
-    <Compile Include="$(BottlenoseLabsUvContentDirectoryPath)/**/*.cs" >
+    <Compile Include="$(_ContentDirectoryPath)/**/*.cs" >
       <Pack>false</Pack>
       <Link>bottlenoselabs/flecs/%(RecursiveDir)%(Filename)%(Extension)</Link>
     </Compile>
-    <Compile Remove="$(BottlenoseLabsUvContentDirectoryPath)/obj/**/*.cs" />
-    <Compile Remove="$(BottlenoseLabsUvContentDirectoryPath)/bin/**/*.cs" />
+    <Compile Remove="$(_ContentDirectoryPath)/obj/**/*.cs" />
+    <Compile Remove="$(_ContentDirectoryPath)/bin/**/*.cs" />
     
   </ItemGroup>
   
-  <ItemGroup Condition=" $(_IsNuGetPackage) == 'false' ">
+  <ItemGroup Condition="$(_IsNuGetPackage) == 'false'">
     
-    <Content Include="$(BottlenoseLabsUvContentDirectoryPath)/**/*.cs" >
+    <Content Include="$(_ContentDirectoryPath)/**/*.cs" >
       <Pack>true</Pack>
       <PackagePath>content/</PackagePath>
       <Link>bottlenoselabs/flecs/%(RecursiveDir)%(Filename)%(Extension)</Link>
     </Content>
-    <Content Remove="$(BottlenoseLabsUvContentDirectoryPath)/obj/**/*.cs" />
-    <Content Remove="$(BottlenoseLabsUvContentDirectoryPath)/bin/**/*.cs" />
+    <Content Remove="$(_ContentDirectoryPath)/obj/**/*.cs" />
+    <Content Remove="$(_ContentDirectoryPath)/bin/**/*.cs" />
     
     <None Include="$(MSBuildThisFileDirectory)/bottlenoselabs.flecs.props">
       <PackagePath>build/</PackagePath>
