--- a/src/cs/Directory.Build.props
+++ b/src/cs/Directory.Build.props
@@ -3,6 +3,8 @@
     <!-- MSBuild settings -->
     <PropertyGroup>
         <NoWarn>$(NoWarn);CA1303;CA1707</NoWarn>
+        <BaseIntermediateOutputPath>$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), .gitignore))/obj/$(MSBuildProjectName)/$(Configuration)</BaseIntermediateOutputPath>
+        <MSBuildProjectExtensionsPath>$(BaseIntermediateOutputPath)</MSBuildProjectExtensionsPath>
     </PropertyGroup>
 
     <!-- bottlenoselabs.MSBuild.Tools settings -->
