--- a/src/cs/Directory.Build.props
+++ b/src/cs/Directory.Build.props
@@ -3,14 +3,9 @@
     <!-- MSBuild settings -->
     <PropertyGroup>
         <NoWarn>$(NoWarn);CA1303;CA1707</NoWarn>
+        <BaseOutputPath>$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), .gitignore))/bin/$(MSBuildProjectName)</BaseOutputPath>
         <BaseIntermediateOutputPath>$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), .gitignore))/obj/$(MSBuildProjectName)/$(Configuration)</BaseIntermediateOutputPath>
         <MSBuildProjectExtensionsPath>$(BaseIntermediateOutputPath)</MSBuildProjectExtensionsPath>
     </PropertyGroup>
-
-    <!-- bottlenoselabs.MSBuild.Tools settings -->
-    <PropertyGroup>
-        <EnableAnalyzers>true</EnableAnalyzers>
-        <EnableAnalyzersStyleCop>true</EnableAnalyzersStyleCop>
-    </PropertyGroup>
-
+    
 </Project>
