--- a/src/cs/samples/flecs-01_hello_world/flecs-01_hello_world.csproj
+++ b/src/cs/samples/flecs-01_hello_world/flecs-01_hello_world.csproj
@@ -7,7 +7,7 @@
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
-    <!-- C# project references -->
+    <!-- flecs: bindings + native library -->
     <Import Project="$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)/../../../../flecs.props'))" />
 
 </Project>
