Update GitHub action

--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -66,3 +66,6 @@ jobs:
         with:
           repository: '${{ github.repository }}'
           dotnet-sdk-version: '6.0.x'
+          myget-access-token: '${{ secrets.MYGET_ACCESS_TOKEN }}'
+          nuget-access-token: '${{ secrets.NUGET_ACCESS_TOKEN }}'
+          
