--- a/src/cs/samples/Directory.Build.props
+++ b/src/cs/samples/Directory.Build.props
@@ -2,4 +2,9 @@
 
     <Import Project="$(MSBuildThisFileDirectory)/../Directory.Build.props" />
 
+    <!-- MSBuild settings -->
+    <PropertyGroup>
+        <IsPackable>false</IsPackable>
+    </PropertyGroup>
+
 </Project>
