--- a/src/cs/Directory.Build.props
+++ b/src/cs/Directory.Build.props
@@ -7,6 +7,7 @@
         <BaseIntermediateOutputPath>$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), .gitignore))/obj/$(MSBuildProjectName)/$(Configuration)</BaseIntermediateOutputPath>
         <MSBuildProjectExtensionsPath>$(BaseIntermediateOutputPath)</MSBuildProjectExtensionsPath>
         <PackageOutputPath>$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), .gitignore))/nupkg</PackageOutputPath>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
     
 </Project>
