--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,6 @@ jobs:
     steps:
 
       - name: "Clone Git repository"
-        if: steps.cache-libs.outputs.cache-hit != 'true'
         uses: actions/checkout@master
         with:
           submodules: "recursive"
@@ -54,6 +53,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      - name: "Clone Git repository"
+        uses: actions/checkout@master
+
       - name: "Download native libraries (win-x64)"
         uses: actions/download-artifact@v1
         with:
@@ -73,5 +75,5 @@ jobs:
           path: "./lib"
 
       - name: ".NET Build"
-        run: dotnet build "${{ github.workspace }}/flecs.sln"
+        run: dotnet build
           
