--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -38,6 +38,10 @@ jobs:
         shell: bash
         run: dotnet tool install --global bottlenoselabs.C2CS
 
+      - name: "Read C code: Linux dependencies"
+        if: runner.os == 'Linux'
+        runs: apt-get install libc6-dev-i386
+
       - name: "Read C code"
         shell: bash
         run: c2cs -c ./bindgen_ast_${{ matrix.platform.rid }}.json
