--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: "Read C code: Linux dependencies"
         if: runner.os == 'Linux'
-        runs: apt-get install libc6-dev-i386
+        run: apt-get install libc6-dev-i386
 
       - name: "Read C code"
         shell: bash
