--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -108,4 +108,5 @@ jobs:
   build-job:
     runs-on: ubuntu-latest
     needs: [bindgen-ast-job, bindgen-cs-job]
-    uses: "bottlenoselabs/flecs-cs/.github/workflows/build.yml@main"
+    steps:
+      - uses: "bottlenoselabs/flecs-cs/.github/workflows/build.yml@main"
