--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -106,7 +106,5 @@ jobs:
           message: "Update bindings"
   
   build-job:
-    runs-on: ubuntu-latest
     needs: [bindgen-ast-job, bindgen-cs-job]
-    steps:
-      - uses: "bottlenoselabs/flecs-cs/.github/workflows/build.yml@main"
+    uses: "bottlenoselabs/flecs-cs/.github/workflows/build.yml@main"
