--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,11 +76,11 @@ jobs:
 
       - name: "Download generated C# code"
         uses: actions/download-artifact@v1
+        continue-on-error: true
         with:
           name: "bindgen-cs"
           path: "./"
 
       - name: ".NET Build"
-        if: always()
         run: dotnet build
           
