--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,4 +1,4 @@
-name: "Pull Request"
+name: "Pull request"
 
 on:
   pull_request:
@@ -10,6 +10,11 @@ jobs:
 
   bindgen-job:
     uses: "./.github/workflows/bindgen.yml"
+
+  commit-job:
+    needs: [bindgen-job]
+    if: github.actor == 'dependabot[bot]'
+    uses: "./.github/workflows/commit.yml"
 
   build-job:
     needs: [bindgen-job]
