--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -3,11 +3,15 @@ name: "Commit generated C# code"
 on:
   workflow_call:
 
+permissions:
+  pull-requests: write
+
 jobs:
 
   commit-job:
     name: "Commit generated C# code"
     runs-on: ubuntu-latest
+    if: github.actor == 'dependabot[bot]'
 
     steps:
       - name: "Clone Git repository"
